# codegraph-viz

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  pyproject.toml  scanner.py
codegraph/: __init__.py  cli.py  server.py
templates/: graph.html
