[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegraph-viz"
version = "0.1.1"
description = "Visualize any Python codebase as an interactive dependency graph. One command. Zero config."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Deep Patel", email = "pateldeep1842@gmail.com" },
]
keywords = [
    "codebase",
    "dependency-graph",
    "visualization",
    "ast",
    "architecture",
    "code-analysis",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[project.scripts]
codegraph = "codegraph.cli:main"

[project.urls]
Homepage = "https://github.com/deeppatel1842/codegraph-viz"
Repository = "https://github.com/deeppatel1842/codegraph-viz"
Issues = "https://github.com/deeppatel1842/codegraph-viz/issues"

[tool.hatch.build.targets.wheel]
packages = ["codegraph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S"]
ignore = ["S603", "S607"]  # subprocess calls are intentional (git)
